Complete in-class exercises of loops and functions

--- a/courses/foundation/intro-to-javascript/smart-ease/index.html
+++ b/courses/foundation/intro-to-javascript/smart-ease/index.html
@@ -8,5 +8,6 @@
   <body>
     <!-- <script src="week1.js"></script> -->
     <script src="week2.js"></script>
+    <script src="in-class.js"></script>
   </body>
 </html>
