--- a/courses/foundation/intro-to-javascript/smart-ease/index.html
+++ b/courses/foundation/intro-to-javascript/smart-ease/index.html
@@ -6,6 +6,7 @@
     <title>Assignment - Intro to JavaScript Week 1</title>
   </head>
   <body>
-    <script src="week3.js"></script>
+    <!-- <script src="week3.js"></script> -->
+    <script src="week4.js"></script>
   </body>
 </html>
