Revert "Merge branch 'main' into javascript-week1/tracy"
This reverts commit bf0acfb07f66c1a12277bd69859ce15c271a69ab, reversing
changes made to faba99386d7d3d237d1898ad11f1761c3dcf290f.

--- a/courses/foundation/html-css/week1/exercise0/index.html
+++ b/courses/foundation/html-css/week1/exercise0/index.html
@@ -22,18 +22,14 @@
         <p>
           Hi! I am Tracy, a budding <strong>Frontend Developer</strong> with a
           soft spot for clean code and problem-solving. My journey into tech
-          started with curiosity and a JavaScript tutorial.
-        </p>
-        <p>
+          started with curiosity and a JavaScript tutorial. <br /><br />
           While I am still early in my development career, I'm committed to
           expanding my skills and building accessible, user-friendly
           applications. I am both solution-oriented and detail-obsessed (in a
           good way 🔍), and I thrive on feedback that helps me improve. Before
           tech, I was a dedicated administration officer, with solid soft skills
           like communication, collaboration, and staying calm under pressure,
-          which I now bring into tech life.
-        </p>
-        <p>
+          which I now bring into tech life. <br /><br />
           Outside of coding, you will probably find me doing <em>yoga</em> and
           <em>pilates</em>, or <em>meditating</em> like it is a full-time job
           (mindfulness practitioner in progress 🧘‍♀️). Also, I am a proud
@@ -68,7 +64,7 @@
       <figure>
         <img
           src="https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NjA5NjA3NTR8&ixlib=rb-4.1.0&q=85"
-          alt="An ginger cat standing in front of a yellow background"
+          alt="An ginger cat standing in front of a yellow background. He is looking up and his tail is pointing up, showing his interest in something outside of the camera's frame."
         />
         <figcaption>Bean, my orange cat</figcaption>
       </figure>
