--- a/courses/foundation/html-css/week1/exercise3+4/index.html
+++ b/courses/foundation/html-css/week1/exercise3+4/index.html
@@ -21,10 +21,7 @@
         <a href="#latest-post">Posts</a>
         <a href="#recent-readings">Readings</a>
       </nav>
-      <a
-        href="https://www.linkedin.com/in/tracytratran/"
-        class="btn-linkedin"
-        target="_blank"
+      <a href="https://www.linkedin.com/in/tracytratran/" class="btn-linkedin"
         >Connect on LinkedIn</a
       >
     </header>
@@ -71,7 +68,6 @@
             <li>
               <a
                 href="https://www.linkedin.com/posts/activity-7338156222983897088-8Z7o?utm_source=share&utm_medium=member_desktop&rcm=ACoAAB8-ZLIBPr5z6Tw1v_FI7EIspeKvXk2f3ww"
-                target="_blank"
                 >From "Wait...what's UX?" to "Let's me rebuild this prototype
                 real quick at 1 a.m."</a
               >
@@ -79,21 +75,18 @@
             <li>
               <a
                 href="https://www.linkedin.com/posts/activity-7333159230562107392-RLMe?utm_source=share&utm_medium=member_desktop&rcm=ACoAAB8-ZLIBPr5z6Tw1v_FI7EIspeKvXk2f3ww"
-                target="_blank"
                 >Latest Active Citizenship Exam goes live</a
               >
             </li>
             <li>
               <a
                 href="https://www.linkedin.com/posts/activity-7324503435653869570-Dvc1?utm_source=share&utm_medium=member_desktop&rcm=ACoAAB8-ZLIBPr5z6Tw1v_FI7EIspeKvXk2f3ww"
-                target="_blank"
                 >Active Citizenship Quiz's new feature alert</a
               >
             </li>
             <li>
               <a
                 href="https://www.linkedin.com/posts/activity-7321114158987374592-0MpT?utm_source=share&utm_medium=member_desktop&rcm=ACoAAB8-ZLIBPr5z6Tw1v_FI7EIspeKvXk2f3ww"
-                target="_blank"
                 >Milestone of my pet project</a
               >
             </li>
